# matching-engine-c

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  check_dpdk_prereq.sh  check_sizes.c  docker-compose.yml  install_dpdk.sh  scripty.py
build-dpdk/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-valgrind/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  binary_client  binary_decoder  build.ninja  cmake_install.cmake  matching_engine  matching_engine_tests  multicast_subscriber  tcp_client
data/: output_file.csv
documentation/: ARCHITECTURE.md  BUILD.md  DOCKER.md  PROTOCOLS.md  QUICK_START.md  README.md  TESTING.md
include/: binary_message_formatter.h  binary_message_parser.h  lockfree_queue.h  message_formatter.h  message_parser.h  message_types.h  order.h  order_book.h  output_publisher.h  processor.h  queues.h  udp_receiver.h
include/core/: matching_engine.h  order.h  order_book.h
include/modes/: multicast_helpers.h  run_modes.h  tcp_mode.h  udp_mode.h  unified_mode.h
include/network/: message_framing.h  multicast_publisher.h  multicast_transport.h  tcp_connection.h  tcp_listener.h  transport_types.h  udp_receiver.h  udp_transport.h
include/network/dpdk/: dpdk_config.h  dpdk_init.h
include/platform/: timestamps.h
include/protocol/: message_types.h  message_types_extended.h  symbol_router.h
include/protocol/binary/: binary_message_formatter.h  binary_message_parser.h  binary_protocol.h
include/protocol/csv/: message_formatter.h  message_parser.h
include/threading/: client_registry.h  lockfree_queue.h  output_publisher.h  output_router.h  processor.h  queues.h
src/: binary_message_formatter.c  binary_message_parser.c  lockfree_queue.c  main.c  matching_engine.c  message_formatter.c  message_parser.c  order_book.c  output_publisher.c  processor.c  udp_receiver.c
src/core/: matching_engine.c  order_book.c
src/modes/: helpers.c  multicast_helpers.c  tcp_mode.c  udp_mode.c  unified_internal.h  unified_mode.c  unified_router.c  unified_tcp.c  unified_udp.c
src/network/: message_framing.c  multicast_publisher.c  multicast_socket.c  tcp_connection.c  tcp_listener.c  udp_receiver.c  udp_socket.c
src/network/dpdk/: dpdk_init.c  dpdk_multicast.c  dpdk_udp.c
src/protocol/binary/: binary_message_formatter.c  binary_message_parser.c
src/protocol/csv/: message_formatter.c  message_parser.c
src/threading/: client_registry.c  lockfree_queue.c  output_publisher.c  output_router.c  processor.c  queues.c
tests/: .test_scenarios_odd.c.swp  test_dpdk.c  test_matching_engine.c  test_message_formatter.c  test_message_parser.c  test_order_book.c  test_runner.c  test_scenarios.c  test_scenarios_even.c  test_scenarios_odd.c  unity.c  unity.h  unity_internals.h
tests/core/: test_matching_engine.c  test_memory_pools.c  test_order_book.c
tests/protocol/: test_message_formatter.c  test_message_parser.c  test_symbol_router.c
tests/scenarios/: test_scenarios_even.c  test_scenarios_odd.c
tests/threading/: test_lockfree_queue.c
tools/: binary_client.c  binary_decoder.c  matching_engine_client.c  multicast_subscriber.c  tcp_client.c
tools/client/: client_config.h  codec.c  codec.h  engine_client.c  engine_client.h  interactive.c  interactive.h  scenarios.c  scenarios.h  transport.c  transport.h
